<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:padding="30dp"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/to_register_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/to_register_button"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label"
            android:textSize="20dp"
            android:layout_margin="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="16dp"
            android:hint="@string/password_label">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>

    </LinearLayout>



</LinearLayout>