<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_label_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_label_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/title_label_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input_desc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/textButton_archivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomar_foto"
        app:layout_constraintTop_toBottomOf="@+id/title_label_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/textButton_galeria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_from_gallery"
        app:layout_constraintTop_toBottomOf="@+id/textButton_archivo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton_galeria"
        android:contentDescription="image"
        android:layout_margin="20dp">

    </ImageView>


    <Button
        android:id="@+id/filledButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        />









</androidx.constraintlayout.widget.ConstraintLayout>